<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="info_app_desc">A simple, rational music player for android.</string>
    <string name="lbl_indexer">Music loading</string>
    <string name="lbl_indexing">Loading music</string>
    <string name="lbl_observing">Monitoring music library</string>
    <string name="lbl_retry">Retry</string>
    <string name="lbl_grant">Grant</string>
    <string name="lbl_songs">Songs</string>
    <string name="lbl_all_songs">All songs</string>
    <string name="lbl_albums">Albums</string>
    <string name="lbl_album">Album</string>
    <string name="lbl_album_live">Live album</string>
    <string name="lbl_album_remix">Remix album</string>
    <string name="lbl_eps">EPs</string>
    <string name="lbl_ep">EP</string>
    <string name="lbl_ep_live">Live EP</string>
    <string name="lbl_ep_remix">Remix EP</string>
    <string name="lbl_singles">Singles</string>
    <string name="lbl_single">Single</string>
    <string name="lbl_single_live">Live single</string>
    <string name="lbl_single_remix">Remix single</string>
    <string name="lbl_compilations">Compilations</string>
    <string name="lbl_compilation">Compilation</string>
    <string name="lbl_compilation_live">Live compilation</string>
    <string name="lbl_compilation_remix">Remix compilations</string>
    <string name="lbl_soundtracks">Soundtracks</string>
    <string name="lbl_soundtrack">Soundtrack</string>
    <string name="lbl_mixtapes">Mixtapes</string>
    <string name="lbl_mixtape">Mixtape</string>
    <string name="lbl_mixes">Mixes</string>
    <string name="lbl_mix">Mix</string>
    <string name="lbl_live_group">Live</string>
    <string name="lbl_remix_group">Remixes</string>
    <string name="lbl_artist">Artist</string>
    <string name="lbl_artists">Artists</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_playlist">Playlist</string>
    <string name="lbl_playlists">Playlists</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_filter_all">All</string>
    <string name="lbl_none">None</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_song_count">Song count</string>
    <string name="lbl_disc">Disc</string>
    <string name="lbl_track">Track</string>
    <string name="lbl_date_added">Date added</string>
    <string name="lbl_sort">Sort</string>
    <string name="lbl_sort_asc">Ascending</string>
    <string name="lbl_sort_dec">Descending</string>
    <string name="lbl_playback">Now playing</string>
    <string name="lbl_equalizer">Equalizer</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_play_selected">Play selected</string>
    <string name="lbl_shuffle">Shuffle</string>
    <string name="lbl_shuffle_selected">Shuffle selected</string>
    <string name="lbl_queue">Queue</string>
    <string name="lbl_play_next">Play next</string>
    <string name="lbl_queue_add">Add to queue</string>
    <string name="lbl_go_artist">Go to artist</string>
    <string name="lbl_go_album">Go to album</string>
    <string name="lbl_song_detail">View properties</string>
    <string name="lbl_props">Song properties</string>
    <string name="lbl_file_name">File name</string>
    <string name="lbl_relative_path">Parent path</string>
    <string name="lbl_format">Format</string>
    <string name="lbl_size">Size</string>
    <string name="lbl_bitrate">Bit rate</string>
    <string name="lbl_sample_rate">Sample rate</string>
    <string name="lbl_shuffle_shortcut_short">Shuffle</string>
    <string name="lbl_shuffle_shortcut_long">Shuffle all</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_state_saved">State saved</string>
    <string name="lbl_state_wiped">State cleared</string>
    <string name="lbl_state_restored">State restored</string>
    <string name="lbl_about">About</string>
    <string name="lbl_version">Version</string>
    <string name="lbl_code">Source code</string>
    <string name="lbl_wiki">Wiki</string>
    <string name="lbl_licenses">Licenses</string>
    <string name="lbl_library_counts">Library statistics</string>
    <string name="lng_widget">View and control music playback</string>
    <string name="lng_indexing">Loading your music library…</string>
    <string name="lng_observing">Monitoring your music library for changes…</string>
    <string name="lng_queue_added">Added to queue</string>
    <string name="lng_author">Developed by Alexander Capehart</string>
    <string name="lng_search_library">Search your library…</string>
    <string name="set_root_title">Settings</string>
    <string name="set_ui">Look and Feel</string>
    <string name="set_ui_desc">Change the theme and colors of the app</string>
    <string name="set_theme">Theme</string>
    <string name="set_theme_auto">Automatic</string>
    <string name="set_theme_day">Light</string>
    <string name="set_theme_night">Dark</string>
    <string name="set_accent">Color scheme</string>
    <string name="set_black_mode">Black theme</string>
    <string name="set_black_mode_desc">Use a pure-black dark theme</string>
    <string name="set_round_mode">Round mode</string>
    <string name="set_round_mode_desc">Enable rounded corners on additional UI elements (requires album covers to be rounded)</string>
    <string name="set_personalize">Personalize</string>
    <string name="set_personalize_desc">Customize UI controls and behavior</string>
    <string name="set_display">Display</string>
    <string name="set_lib_tabs">Library tabs</string>
    <string name="set_lib_tabs_desc">Change visibility and order of library tabs</string>
    <string name="set_bar_action">Custom playback bar action</string>
    <string name="set_notif_action">Custom notification action</string>
    <string name="set_action_mode_next">Skip to next</string>
    <string name="set_action_mode_repeat">Repeat mode</string>
    <string name="set_behavior">Behavior</string>
    <string name="set_library_song_playback_mode">When playing from the library</string>
    <string name="set_detail_song_playback_mode">When playing from item details</string>
    <string name="set_playback_mode_none">Play from shown item</string>
    <string name="set_playback_mode_songs">Play from all songs</string>
    <string name="set_playback_mode_album">Play from album</string>
    <string name="set_playback_mode_artist">Play from artist</string>
    <string name="set_playback_mode_genre">Play from genre</string>
    <string name="set_keep_shuffle">Remember shuffle</string>
    <string name="set_keep_shuffle_desc">Keep shuffle on when playing a new song</string>
    <string name="set_content">Content</string>
    <string name="set_content_desc">Control how music and images are loaded</string>
    <string name="set_music">Music</string>
    <string name="set_observing">Automatic reloading</string>
    <string name="set_observing_desc">Reload the music library whenever it changes (requires persistent notification)</string>
    <string name="set_exclude_non_music">Exclude non-music</string>
    <string name="set_exclude_non_music_desc">Ignore audio files that are not music, such as podcasts</string>
    <string name="set_separators">Multi-value separators</string>
    <string name="set_separators_desc">Configure characters that denote multiple tag values</string>
    <string name="set_separators_comma">Comma (,)</string>
    <string name="set_separators_semicolon">Semicolon (;)</string>
    <string name="set_separators_slash">Slash (/)</string>
    <string name="set_separators_plus">Plus (+)</string>
    <string name="set_separators_and">Ampersand (&amp;)</string>
    <string name="set_separators_warning">Warning: Using this setting may result in some tags being incorrectly interpreted as having multiple values. You can resolve this by prefixing unwanted separator characters with a backslash (\\).</string>
    <string name="set_intelligent_sorting">Intelligent sorting</string>
    <string name="set_intelligent_sorting_desc">Correctly sort names that begin with numbers or words like \"the\" (works best with english-language music)</string>
    <string name="set_hide_collaborators">Hide collaborators</string>
    <string name="set_hide_collaborators_desc">Only show artists that are directly credited on an album (works best on well-tagged libraries)</string>
    <string name="set_images">Images</string>
    <string name="set_cover_mode">Album covers</string>
    <string name="set_cover_mode_off">Off</string>
    <string name="set_cover_mode_media_store">Fast</string>
    <string name="set_cover_mode_quality">High quality</string>
    <string name="set_audio">Audio</string>
    <string name="set_audio_desc">Configure sound and playback behavior</string>
    <string name="set_playback">Playback</string>
    <string name="set_headset_autoplay">Headset autoplay</string>
    <string name="set_headset_autoplay_desc">Always start playing when a headset is connected (may not work on all devices)</string>
    <string name="set_rewind_prev">Rewind before skipping back</string>
    <string name="set_rewind_prev_desc">Rewind before skipping to the previous song</string>
    <string name="set_repeat_pause">Pause on repeat</string>
    <string name="set_repeat_pause_desc">Pause when a song repeats</string>
    <string name="set_replay_gain">ReplayGain</string>
    <string name="set_replay_gain_mode">ReplayGain strategy</string>
    <string name="set_replay_gain_mode_track">Prefer track</string>
    <string name="set_replay_gain_mode_album">Prefer album</string>
    <string name="set_replay_gain_mode_dynamic">Prefer album if one is playing</string>
    <string name="set_pre_amp">ReplayGain pre-amp</string>
    <string name="set_pre_amp_desc">The pre-amp is applied to the existing adjustment during playback</string>
    <string name="set_pre_amp_with">Adjustment with tags</string>
    <string name="set_pre_amp_without">Adjustment without tags</string>
    <string name="set_pre_amp_warning">Warning: Changing the pre-amp to a high positive value may result in peaking on some audio tracks.</string>
    <string name="set_library">Library</string>
    <string name="set_dirs">Music folders</string>
    <string name="set_dirs_desc">Manage where music should be loaded from</string>
    <string name="set_dirs_list">Folders</string>
    <string name="set_dirs_mode">Mode</string>
    <string name="set_dirs_mode_exclude">Exclude</string>
    <string name="set_dirs_mode_exclude_desc">Music will <b>not</b> be loaded from the folders you add.</string>
    <string name="set_dirs_mode_include">Include</string>
    <string name="set_dirs_mode_include_desc">Music will <b>only</b> be loaded from the folders you add.</string>
    <string name="set_reindex">Refresh music</string>
    <string name="set_reindex_desc">Reload the music library, using cached tags when possible</string>
    <string name="set_rescan">Rescan music</string>
    <string name="set_rescan_desc">Clear the tag cache and fully reload the music library (slower, but more complete)</string>
    <string name="set_state">Persistence</string>
    <string name="lbl_sleep_timer">Sleep Timer</string>
    <string name="lbl_sleep_timer_desc">Stop playback at the end of the timer</string>
    <string name="lbl_minute_15">15 minute</string>
    <string name="lbl_minute_30">30 minute</string>
    <string name="lbl_hour_one">1 hour</string>
    <string name="lbl_hour_two">2 hour</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_hour_three">3 Hour</string>
</resources>