<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/sleep_timer_dialog_tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_sleep_timer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/sleep_timer_dialog_title_left"
        android:layout_marginTop="@dimen/sleep_timer_dialog_title_top"
        />

    <TextView
        android:id="@+id/sleep_timer_dialog_tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_sleep_timer_desc"
        android:textSize="@dimen/text_size_sleep_timer_dialog_tvDesc_"
        app:layout_constraintTop_toBottomOf="@id/sleep_timer_dialog_tvTitle"
        app:layout_constraintLeft_toLeftOf="@id/sleep_timer_dialog_tvTitle"
        android:layout_marginTop="@dimen/sleep_timer_dialog_title_top"
        />

    <RadioGroup
        android:id="@+id/sleep_timer_dialog_rgGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sleep_timer_dialog_tvDesc"
        app:layout_constraintLeft_toLeftOf="@id/sleep_timer_dialog_tvTitle"
        android:orientation="vertical"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_minute_15"
            android:padding="@dimen/sleep_timer_dialog_rb_padding"
            android:tag="15"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_minute_30"
            android:padding="@dimen/sleep_timer_dialog_rb_padding"
            android:tag="30"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_hour_one"
            android:padding="@dimen/sleep_timer_dialog_rb_padding"
            android:tag="60"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_hour_two"
            android:padding="@dimen/sleep_timer_dialog_rb_padding"
            android:tag="120"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_hour_three"
            android:padding="@dimen/sleep_timer_dialog_rb_padding"
            android:tag="180"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/sleep_timer_dialog_tvConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_confirm"
        android:textColor="@color/dynamic_primary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/sleep_timer_dialog_button_end"
        android:layout_marginBottom="@dimen/sleep_timer_dialog_button_bottom"
        />

    <TextView
        android:id="@+id/sleep_timer_dialog_tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cancel"
        android:textColor="@color/dynamic_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sleep_timer_dialog_tvConfirm"
        android:layout_marginEnd="@dimen/sleep_timer_dialog_button_end"
        android:layout_marginBottom="@dimen/sleep_timer_dialog_button_bottom"
        />

</androidx.constraintlayout.widget.ConstraintLayout>